Database added for syncronization across platforms

--- a/WinUI/WinUI.csproj
+++ b/WinUI/WinUI.csproj
@@ -115,6 +115,12 @@
     </Content>
     <Content Include="Win Command Prompt-01.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj">
+      <Project>{8a5ed29c-d959-4caa-aa51-250624500b76}</Project>
+      <Name>Business</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
