--- a/WinUI/App.config
+++ b/WinUI/App.config
@@ -3,4 +3,15 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+    <connectionStrings>
+      <add name="MCDbConnectionString"
+          connectionString="Data Source=.;Initial Catalog=MultipleCountdown;Persist Security Info=True;User ID=sa;Password=123456"
+          providerName="System.Data.SqlClient" />
+    </connectionStrings>
+  <appSettings>
+    <add key="encryptionEnabled" value="true" />
+    <add key="passPhrase" value="passPhraseMC" />
+    <add key="saltValue" value="saltItMC" />
+    <add key="initVector" value="3CabiK@!orealnMCKc" />
+  </appSettings>
 </configuration>
