--- a/WinUI/App.config
+++ b/WinUI/App.config
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
@@ -12,4 +17,17 @@
     <add key="saltValue" value="saltItMC"/>
     <add key="initVector" value="3CabiK@!orealnMCKc"/>
   </appSettings>
+  <applicationSettings>
+    <MultipleCountdown.Properties.Settings>
+      <setting name="SynchronizeIntervalInSeconds" serializeAs="String">
+        <value>180</value>
+      </setting>
+      <setting name="UpdateRemainingTimeIntervalInSeconds" serializeAs="String">
+        <value>30</value>
+      </setting>
+      <setting name="SendNotificationEmailWhenComplete" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </MultipleCountdown.Properties.Settings>
+  </applicationSettings>
 </configuration>
