reading/writing settings is done

--- a/WinUI/App.config
+++ b/WinUI/App.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
@@ -17,7 +17,7 @@
     <add key="saltValue" value="saltItMC"/>
     <add key="initVector" value="3CabiK@!orealnMCKc"/>
   </appSettings>
-  <applicationSettings>
+  <userSettings>
     <MultipleCountdown.Properties.Settings>
       <setting name="SynchronizeIntervalInSeconds" serializeAs="String">
         <value>180</value>
@@ -29,5 +29,5 @@
         <value>False</value>
       </setting>
     </MultipleCountdown.Properties.Settings>
-  </applicationSettings>
+  </userSettings>
 </configuration>
