--- a/WinUI/Properties/Settings.settings
+++ b/WinUI/Properties/Settings.settings
@@ -2,13 +2,13 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MultipleCountdown.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="SynchronizeIntervalInSeconds" Type="System.Int32" Scope="Application">
+    <Setting Name="SynchronizeIntervalInSeconds" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">180</Value>
     </Setting>
-    <Setting Name="UpdateRemainingTimeIntervalInSeconds" Type="System.Int32" Scope="Application">
+    <Setting Name="UpdateRemainingTimeIntervalInSeconds" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">30</Value>
     </Setting>
-    <Setting Name="SendNotificationEmailWhenComplete" Type="System.Boolean" Scope="Application">
+    <Setting Name="SendNotificationEmailWhenComplete" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
