send email #checkpoint

--- a/WinUI/App.config
+++ b/WinUI/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
@@ -30,4 +33,23 @@
       </setting>
     </MultipleCountdown.Properties.Settings>
   </userSettings>
+  <applicationSettings>
+    <MultipleCountdown.Properties.Settings>
+      <setting name="EmailSmtpServer" serializeAs="String">
+        <value>smtp.gmail.com</value>
+      </setting>
+      <setting name="EmailSmtpPortNumber" serializeAs="String">
+        <value>587</value>
+      </setting>
+      <setting name="EmailSmtpRequiresSSL" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="EmailFromAddress" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="EmailFromPassword" serializeAs="String">
+        <value />
+      </setting>
+    </MultipleCountdown.Properties.Settings>
+  </applicationSettings>
 </configuration>
