send email finished

--- a/WinUI/App.config
+++ b/WinUI/App.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MultipleCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
@@ -20,21 +20,22 @@
     <add key="saltValue" value="saltItMC"/>
     <add key="initVector" value="3CabiK@!orealnMCKc"/>
   </appSettings>
+  
+  <applicationSettings>
+    <MultipleCountdown.Properties.Settings>
+      <setting name="UpdateRemainingTimeIntervalInSeconds" serializeAs="String">
+        <value>30</value>
+      </setting>
+    </MultipleCountdown.Properties.Settings>
+  </applicationSettings>
   <userSettings>
     <MultipleCountdown.Properties.Settings>
       <setting name="SynchronizeIntervalInSeconds" serializeAs="String">
         <value>180</value>
       </setting>
-      <setting name="UpdateRemainingTimeIntervalInSeconds" serializeAs="String">
-        <value>30</value>
-      </setting>
       <setting name="SendNotificationEmailWhenComplete" serializeAs="String">
         <value>False</value>
       </setting>
-    </MultipleCountdown.Properties.Settings>
-  </userSettings>
-  <applicationSettings>
-    <MultipleCountdown.Properties.Settings>
       <setting name="EmailSmtpServer" serializeAs="String">
         <value>smtp.gmail.com</value>
       </setting>
@@ -45,11 +46,17 @@
         <value>True</value>
       </setting>
       <setting name="EmailFromAddress" serializeAs="String">
-        <value />
+        <value>somebody@gmail.com</value>
       </setting>
       <setting name="EmailFromPassword" serializeAs="String">
-        <value />
+        <value>somebodys_password</value>
+      </setting>
+      <setting name="EmailToAddress" serializeAs="String">
+        <value>somebodyelse@gmail.com</value>
+      </setting>
+      <setting name="AutoSynchronize" serializeAs="String">
+        <value>True</value>
       </setting>
     </MultipleCountdown.Properties.Settings>
-  </applicationSettings>
+  </userSettings>
 </configuration>
