--- a/WinUI/App.config
+++ b/WinUI/App.config
@@ -55,7 +55,7 @@
         <value>somebodyelse@gmail.com</value>
       </setting>
       <setting name="AutoSynchronize" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </MultipleCountdown.Properties.Settings>
   </userSettings>
